reverted previous rebase and minor fixes: - fix to tsconfig path - hide scrollbar of fixed sidebar - delete duplicated FilterSection

--- a/src/theme/mixins/reusableStyling.scss
+++ b/src/theme/mixins/reusableStyling.scss
@@ -4,6 +4,11 @@
 
 @mixin fixedSidebar {
   transition: variables.$transition;
+  scrollbar-width: none;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
 
   @include breakpoints.desktopSmall {
     z-index: 1;
